gpio_macros/tests/gpio_pin_forgot_af.stderr
Inherited
error: expected `,`
 --> $DIR/gpio_pin_forgot_af.rs:3:1
  |
3 | gpio_pin!(PA12);
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
