gpio_macros/tests/gpio_pin_forgot_af.rs
use gpio_macros::gpio_pin;

gpio_pin!(PA12);

fn main() {}